--- a/frontend_MoveUp/src/components/register/register.css
+++ b/frontend_MoveUp/src/components/register/register.css
@@ -26,7 +26,7 @@ body {
     border-radius: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
-    & .login {
+    & .register {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -37,7 +37,7 @@ body {
 
         & .title {
             font-size: 28px;
-            margin-top: 25%;
+            margin-top: 0%;
             color: #5932EA;
         }
 
@@ -50,12 +50,18 @@ body {
             margin-top: 10%;
             gap: 20px;
 
-            & .input-login {
+            & .input-register {
                 background-position: 10px center;
                 border: none;
                 border-radius: 5px;
                 padding: 10px 30px;
                 min-width: 100%;
+            }
+
+            & .input-user {
+                background: url('../../../public/icons8-usuário-48.png') #f1f1f1 no-repeat left center;
+                background-size: 20px 20px;
+                background-position: 5px center;
             }
 
             & .input-email {
@@ -64,30 +70,10 @@ body {
                 background-position: 5px center;
             }
 
-            & .input-user {
+            & .input-password {
                 background: url('../../../public/icons8-cadeado-32.png') #f1f1f1 no-repeat left center;
                 background-size: 20px 20px;
                 background-position: 5px center;
-            }
-
-            & #forgotten-and-checkbox {
-                display: flex;
-                justify-content: space-between;
-                min-width: 100%;
-                font-size: 15px;
-
-                & span {
-                    margin-left: 5px;
-                }
-            }
-
-            @media (max-width: 1500px) {
-                #forgotten-and-checkbox {
-                    display: flex;
-                    flex-direction: column;
-                    text-align: left;
-                    gap: 5px;
-                }
             }
 
             & #send {
@@ -107,7 +93,7 @@ body {
         }
     }
 
-    & .register {
+    & .login {
         display: flex;
         justify-content: center;
         flex-direction: column;
